Agrego cambios últimos

--- a/force-app/main/default/classes/CaseTriggerHelper_Test.cls
+++ b/force-app/main/default/classes/CaseTriggerHelper_Test.cls
@@ -134,18 +134,15 @@ public class CaseTriggerHelper_Test {
         update caso;
         
         caso.FS_AprobacionDisenioTecnico__c = 'Si';
-         caso.FS_MotivosRechazoDT__c = null;
+        caso.FS_MotivosRechazoDT__c = null;
         update caso;
         
         caso.FS_URLCodigoFuente__c = 'https://fisagrp.com';
         caso.FS_URLSolucionDefinitiva__c = 'https://fisagrp.com';
         caso.FS_EnviarAprobacionSolucionDN2__c = true;
-        update caso;
-        
-        
         caso.FS_AprobacionSolucionDefinitivaN2__c = 'No';
         caso.FS_MotivoRechazoSDN2__c = 'Desarrollo incompleto';
-        update caso;
+        //update caso;
         
     }
     
